# jf8net

./: .gitignore  README.md  pyproject.toml
examples/: 01_basic_status.py  02_receive_messages.py  03_send_message.py  04_frame_assembly.py  05_radio_control.py  06_config_management.py  07_spectrum_monitor.py  08_sync_usage.py  09_chat.py
jf8net/: __init__.py  _client.py  _models.py  _parsers.py  sync.py
